--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
     <div class="hero">
         <div class="hero-inner">
-            <a href="index.htm" class="hero-logo"><img src="img/profile-img.png" alt="Logo Image"></a>
+            <a href="index.htm" class="hero-logo"><img src="img/profile-img.jpg" alt="Logo Image"></a>
             <div class="hero-copy">
                 <h1><span>I’m</span> Thành Lợi</h1>
                 <h5>Developer, Web Designer, Teacher, Tester</h5>
